# pixelhouse

./: README.md  database.md
python-rest-api/: README.md  alembic.ini  app.py  pyproject.toml
python-rest-api/migrations/: env.py
python-rest-api/migrations/versions/: c7c5314e5349_first_migration.py
react-app/: package-lock.json  package.json  webpack.config.js
react-app/public/: index.html
react-app/src/: App.js  reportWebVitals.js  style.css  style.js
react-app/src/assets/icons/: index.js
react-app/src/assets/imgs/: index.js
react-app/src/components/: index.js
react-app/src/components/buttons/button/: index.js  style.js
react-app/src/components/card/accessCard/: index.js  style.js
react-app/src/components/card/userCard/: index.js  style.js
react-app/src/components/cardList/userCardList/: index.js  style.js
react-app/src/components/inputs/input/: index.js  style.js
react-app/src/components/text/: index.js  style.js
react-app/src/pages/: index.js
react-app/src/pages/access/: index.js  style.js
react-app/src/pages/table/: index.js  style.js
react-app/src/services/: pythonApi.js
